style: added z-index to avoid future issues with stacking contexts

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -3,6 +3,7 @@
 .menu {
   background-color: var(--clr-neutral-900);
   position: fixed;
+  z-index: 2;
   inset: 0 0 0 100%;
   visibility: hidden;
   min-width: max-content;
